# ayaFlow

./: .gitignore  Cargo.toml  Dockerfile  HOW_TO_USE.md  HOW_TO_USE_DOCKER.md  HOW_TO_USE_K8S.md  HOW_TO_USE_LOCAL.md  LICENSE-APACHE  LICENSE-GPL  LICENSE-MIT  README.md  WHY_AYAFLOW.md  docker-compose.example.yml  docker-compose.monitoring.example.yml
.github/workflows/: docker-publish.yml  release-binaries.yml
ayaflow/: Cargo.toml
ayaflow-common/: Cargo.toml
ayaflow-common/src/: lib.rs
ayaflow-ebpf/: Cargo.toml
ayaflow-ebpf/src/: main.rs
ayaflow/src/: api.rs  config.rs  dns.rs  l7.rs  main.rs  state.rs  storage.rs
grafana/: dashboard.json
k8s/: daemonset.yaml  example.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: ayaflow.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
src/: api.rs  config.rs  main.rs  sniffer.rs  state.rs  storage.rs
xtask/: Cargo.toml
xtask/src/: main.rs
