[package]
name = "ayaflow-ebpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya-ebpf = "0.1"
ayaflow-common = { path = "../ayaflow-common", default-features = false }
network-types = "0.0.7"

[[bin]]
name = "ayaflow"
path = "src/main.rs"

# eBPF programs MUST have all code in one section -- the kernel verifier
# rejects programs with cross-section function calls (aya cannot resolve them
# for classifier programs).  These flags ensure:
# - opt-level=2       : enable inlining
# - debug-assertions  : no panic checks in .text
# - overflow-checks   : no overflow checks in .text
# - lto=true          : cross-crate inlining via bpf-linker
# - codegen-units=1   : single compilation unit (better inlining)
[profile.dev]
opt-level = 2
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1

[profile.release]
opt-level = 2
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
